Application/Backend/bases/shorturl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorturl
  namespace: shorturl
  labels:
    app: shorturl
    env: production
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: shorturl
      env: production
  template:
    metadata:
      labels:
        app: shorturl
        env: production
    spec:
      nodeSelector:
        "eks.amazonaws.com/nodegroup": acme_corp
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - shorturl
                topologyKey: "kubernetes.io/hostname"
      serviceAccountName: shorturl  
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: shorturl
          image: 848417356303.dkr.ecr.us-east-1.amazonaws.com/shorturl:1.0.11
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
