Application/Backend/bases/shorturl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shorturl
  namespace: shorturl
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: shorturl
    env: production
