Application/Backend/bases/shorturl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shorturl
  namespace: shorturl
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    # Catch-all rule for /health on any host
    - http:
        paths:
          - pathType: Prefix
            path: /health
            backend:
              service:
                name: shorturl
                port:
                  number: 3000

    # Rule for specific host and root path
    - host: api.deeplink.in
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: shorturl
                port:
                  number: 3000
